[tool.poetry]
name = "jwarcli"
version = "0.1.0"
description = ""
authors = ["Justin Rabang <justin.rabang@etradingsoftware.com>"]
readme = "README.md"

[tool.poetry.scripts]
jwarcli = "jwarcli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
